--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+build
+.cache
+
 # ignore input files
 *input.txt
 
@@ -33,3 +36,16 @@
 *.exe
 *.out
 *.app
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
