Completed day 4, added graphing library

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(lib src/io.cpp)
+add_library(lib src/io.cpp src/graph.cpp)
 target_include_directories(lib PUBLIC include)
 target_compile_features(lib PUBLIC cxx_std_20)
